# gooroom-notifyd

./: Makefile.am  README  autogen.sh  configure.ac
debian/: changelog  control  copyright
icons/scalable/: Makefile.am
po/: POTFILES.in  ko.po
src/: Makefile.am  apps.gooroom-notifyd.gschema.xml.in.in  common.c  common.h  gooroom-notify-daemon.c  gooroom-notify-daemon.h  gooroom-notify-window.c  gooroom-notify-window.h  gooroom-notify-window.ui  gooroom-notifyd.desktop.in  gresource.xml  main.c  notify-dbus.xml  theme.css
themes/: Makefile.am
themes/gtk-3.20/Bright/: gtk.css
themes/gtk-3.20/Default/: gtk.css
themes/gtk-3.20/Gooroom/: gtk.css
themes/gtk-3.20/Retro/: gtk.css
themes/gtk-3.20/Smoke/: gtk.css
