brightthemedir = $(datadir)/themes/Bright/gooroom-notify-4.0
dist_brighttheme_DATA = gtk-3.20/Bright/gtk.css

defaultthemedir = $(datadir)/themes/Default/gooroom-notify-4.0
dist_defaulttheme_DATA = gtk-3.20/Default/gtk.css

retrothemedir = $(datadir)/themes/Retro/gooroom-notify-4.0
dist_retrotheme_DATA = gtk-3.20/Retro/gtk.css

smokethemedir = $(datadir)/themes/Smoke/gooroom-notify-4.0
dist_smoketheme_DATA = gtk-3.20/Smoke/gtk.css

gooroomthemedir = $(datadir)/themes/Gooroom/gooroom-notify-4.0
dist_gooroomtheme_DATA = gtk-3.20/Gooroom/gtk.css
